--- a/.github/workflows/tempalte.yml
+++ b/.github/workflows/tempalte.yml
@@ -15,4 +15,7 @@ jobs:
         nuget-version: '5.x'
 
     - name: Nuget Pack
-      run: nuget pack .\TelegramBotTemplate.nuspec
+      run: nuget pack *.nuspec
+
+    - name: Nuget Push
+      run: nuget push *.nupkg
