--- a/.github/workflows/tempalte.yml
+++ b/.github/workflows/tempalte.yml
@@ -18,4 +18,4 @@ jobs:
       run: nuget pack .\TelegramBotTemplate.nuspec -OutputFileNamesWithoutVersion
 
     - name: Nuget Push
-      run: nuget push .\TelegramBotTemplate.nupkg -ApiKey ${{ secrets.NUGETAPIKEY }}
+      run: nuget push .\TelegramBotTemplate.nupkg -Source https://api.nuget.org/v3/index.json
